# This is a list of changes in pygame's history.
#
# CVS tag names are placed before the date
# BREAK = change breaks existing code
# BUG   = fixed a bug that was (or could have been) crashing

July 23, 2001
	music specifically halted when quitting (should not matter?)
	mixer.get_init() now returns the initialized playback format

July 21, 2001
	all events can be posted, not just USEREVENT
	subsurfaces inherit colorkey and alpha settings

Jul 20, 2001
	default font "finding" is smarter

Jul 17, 2001
	added polygon() and ellipse() to pygame.draw
	lines with width>2 are now correct (was one too small)

Jul 16, 2001
	can work with software surfaces before pygame.init()
	Surface.convert() now can take arguments like pygame.Surface()
	pygame.display.set_icon() sets the windowmanager icon

Jul 15, 2001
	fixed bad internal display reference counting [BUG]

Jul 14, 2001
	still makes clean-ish exit if segfault in exit handling

Jul 10, 2001
	image.tostring makes alpha from colorkey, if asking for RGBA

Jul 6, 2001
	added python 1.5.2 compatability

June 25, 2001
	horizontal transform.flip() was reading pixels off by one [BUG]

June 24, 2001
	calling set_mode will change all references to the display surface


pygame-11
Jun 23, 2001
	removed smooth underline font render protection

Jun 19, 2001
	fixed botched image.save() function

Jun 15, 2001
	new inplace Rect calls: move_ip, union_ip, etc

Jun 11, 2001
	smarter locking with subsurfaces
	added transform.rotozoom(), which uses builtin SDL_rotozoom

May 31, 2001
	correctly handle unicode filenames

May 29, 2001
	set display physical palette with display.set_palette()
	added transform module (with rotate and scale)

May 26, 2001
	code compiles with macos now

May 23, 2001
	fixed line drawing of width 1
	draw.lines() was broken with sections outside clip

May 22, 2001
	added midleft, midright, midtop, and midbottom to Rect
	added Rect.unionall() function to union a list of Rects
	fixed problem in 16bit surfarrays